--- a/package.json
+++ b/package.json
@@ -3,25 +3,39 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "ts-node ./src/app.ts"
+    "start": "nodemon ./src/app.ts",
+    "dev": "nodemon ./src/app.ts"
   },
-  "keywords": ["typescript","Express","mongo","mongoose","backend"],
+  "keywords": [
+    "typescript",
+    "Express",
+    "mongo",
+    "mongoose",
+    "backend"
+  ],
   "author": "Yalda Mahmoodi, Amir Samimi, Mohammad, Nima",
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
+    "custom-env": "^2.0.6",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
+    "morgan": "^1.10.1",
     "uuid": "^11.1.0",
     "zod": "^4.0.17"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.2.1",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
