db schema, models, connection updated. zod db schemas added, working on controllers and services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,22 @@ services:
     volumes:
       - mongo_data:/data/db
 
+  mongo-express:
+    image: mongo-express:1.0.0-alpha.4
+    container_name: mongo-express
+    restart: unless-stopped
+    ports:
+      - "8081:8081"
+    environment:
+      ME_CONFIG_MONGODB_SERVER: mongo
+      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
+      ME_CONFIG_MONGODB_ADMINPASSWORD: admin
+    depends_on:
+      - mongo
+
   mongo-test:
     image: mongo:6.0
-    container_name: mongogram
+    container_name: mongogram-test
     restart: unless-stopped
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
@@ -25,9 +38,21 @@ services:
     ports:
       - "27018:27017"
     volumes:
-      - mongo_data:/data/db
+      - mongo_test_data:/data/db
+
+  mongo-express-test:
+    image: mongo-express:1.0.0-alpha.4
+    container_name: mongo-express-test
+    restart: unless-stopped
+    ports:
+      - "8082:8081"
+    environment:
+      ME_CONFIG_MONGODB_SERVER: mongo-test
+      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
+      ME_CONFIG_MONGODB_ADMINPASSWORD: admin
+    depends_on:
+      - mongo-test
 
 volumes:
   mongo_data:
-
-
+  mongo_test_data:
