--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,15 @@
-    // CONFIGURATION
-    PORT: z.coerce.number().min(3000).max(65535).default(3001),
-    CORS_ORIGIN: z.string().startsWith("http://") || z.string().startsWith("https://"),
+    # ENVIROMENT
+    NODE_ENV=development
 
-    // DB
-    MONGODB_URI: z.string().startsWith("mongodb://"),
-    MIN_POOL_SIZE: z.coerce.number().min(5).max(15).default(5),
-    MAX_POOL_SIZE: z.coerce.number().min(15).max(25).default(25),
+    # CONFIGURATION
+    PORT=3001,
+    CORS_ORIGIN=https://yaldamahmoudi.com,https://amirsamimi.com,https://mohammadasghari.com,https://nimaelahinejad.com
 
-    // SECURITY
-    ACCESS_TOKEN_SECRET: z.string().default("secret"),
-    ACCESS_TOKEN_EXPIRES_IN: z.string().default("15m"),
+    # DB
+    MONGODB_URI=mongodb://,
+    MIN_POOL_SIZE=5,
+    MAX_POOL_SIZE=25,
+
+    # SECURITY
+    ACCESS_TOKEN_SECRET=بسماللهوباللهوالیعلیاللهواللهواکبر,
+    ACCESS_TOKEN_EXPIRES_IN:15m,
