--- a/.env.example
+++ b/.env.example
@@ -2,14 +2,14 @@
     NODE_ENV=development
 
     # CONFIGURATION
-    PORT=3001,
+    PORT=3001
     CORS_ORIGIN=https://yaldamahmoudi.com,https://amirsamimi.com,https://mohammadasghari.com,https://nimaelahinejad.com
 
     # DB
-    MONGODB_URI=mongodb://,
-    MIN_POOL_SIZE=5,
-    MAX_POOL_SIZE=25,
+    MONGODB_URI=mongodb://
+    MIN_POOL_SIZE=5
+    MAX_POOL_SIZE=25
 
     # SECURITY
-    ACCESS_TOKEN_SECRET=بسماللهوباللهوالیعلیاللهواللهواکبر,
-    ACCESS_TOKEN_EXPIRES_IN:15m,
+    ACCESS_TOKEN_SECRET=بسماللهوباللهوالیعلیاللهواللهواکبر
+    ACCESS_TOKEN_EXPIRES_IN=54000
